src/assets/themes/default/root.less
body {
  padding: 0;
  margin: 0;
  // font-family: ChineseFont, EnglishFont, Apple Color Emoji, Segoe UI Emoji, system-ui, sans-serif;
  font-display: block;
  color: @color-font-default;
  background: @background-main;
  overflow: scroll;

  &.blur {
    filter: blur(30px);
  }
}

div {
  box-sizing: border-box !important;
}

a {
  color: @color-theme;
}

p {
  opacity: .78;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: normal;
}

::-webkit-scrollbar:hover {
  -webkit-user-drag: none;
}

::-webkit-scrollbar-thumb:hover {
  margin-top: 40px;
}

::-webkit-scrollbar-track {
  margin-top: 40px;
}

/**
 * sweet alert
 * customed style
**/
.swal-button--confirm {
  background-color: fade(@background-btn-highlight, 70%);
  &:hover:not([disabled]) {
    background-color: fade(@background-btn-highlight, 90%)
  }
}

.swal-button {
  outline: none;
  box-shadow: none;
}

.swal-icon {
  width: 100%;
  height: 200px;
  border: none;
  border-radius: 0;
  * {
    display: none;
  }
}

.swal-icon--info {
  background: url('../../img/loading/10.png') center center no-repeat;
  background-size: auto 100%;
}

.swal-icon--error {
  background: url('../../img/loading/1.png') center center no-repeat;
  background-size: auto 100%;
}

.swal-icon--warning {
  background: url('../../img/loading/10.png') center center no-repeat;
  background-size: auto 100%;
}

.swal-icon--success {
  background: url('../../img/loading/10.png') center center no-repeat;
  background-size: auto 100%;
}

